Extension of the application structure

--- a/lib/README
+++ b/lib/README
@@ -1,46 +1,34 @@
 
-This directory is intended for project specific (private) libraries.
-PlatformIO will compile them to static libraries and link into executable file.
+En este fichero explico para que sirve cada carpeta y cada uno de los ficheros
 
-The source code of each library should be placed in a an own separate directory
-("lib/your_library_name/[here are source files]").
 
-For example, see a structure of the following two libraries `Foo` and `Bar`:
-
+hvac
+|--.pio
+|--.vscode
+|--include
 |--lib
-|  |
-|  |--Bar
-|  |  |--docs
-|  |  |--examples
-|  |  |--src
-|  |     |- Bar.c
-|  |     |- Bar.h
-|  |  |- library.json (optional, custom build options, etc) https://docs.platformio.org/page/librarymanager/config.html
-|  |
-|  |--Foo
-|  |  |- Foo.c
-|  |  |- Foo.h
-|  |
-|  |- README --> THIS FILE
-|
-|- platformio.ini
+|  |--distribution
+|  |  |--air
+|  |  |--floor
+|  |--generation
+|  |--message
+      |-message_en.json
+      |-message_es.json
+|  |--system
+|  |  |--administration
+|  |  |--management
+|  |  |  |--schedule
+|  |  |  |--temperature
+|  |--utility
+|  |  |--communication
+|  |  |--configuration
+|  |  |--encryption
+|  |  |--file
+|  |  |--peripheral
+|  |- README
 |--src
    |- main.c
-
-and a contents of `src/main.c`:
-```
-#include <Foo.h>
-#include <Bar.h>
-
-int main (void)
-{
-  ...
-}
-
-```
-
-PlatformIO Library Dependency Finder will find automatically dependent
-libraries scanning project source files.
-
-More information about PlatformIO Library Dependency Finder
-- https://docs.platformio.org/page/librarymanager/ldf.html
+|--test
+   |- README 
+|- .gitignore
+|- platformio.ini
